# termainer

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  FAQ-es.md  FAQ.md  MANIFEST.in  README-es.md  README.md  install.sh  pyproject.toml  run.sh  test.sh
.github/homebrew/: termainer.rb
.github/workflows/: ci.yml  publish.yml  release.yml
Formula/: termainer.rb
docs/: branding.md  configuration-reference.md  design.md  roadmap.md
guide/: configuration-reference-es.md
scripts/: smoke-test.sh  test-brew.sh  test-docker.sh  test-dummies.sh  test-pip.sh
src/termainer/: app.py  config.py  config_manager.py  locale.py  server_manager.py  ssh_config.py  storage.py  version.py
src/termainer/providers/: base.py  docker.py  kubernetes.py  openshift.py  podman.py  swarm.py
src/termainer/remote/: ssh.py
src/termainer/ui/: dashboard.py  environment.py  home.py  splash.py  styles.tcss  widgets.py
src/termainer/utils/: helpers.py
tests/: conftest.py  test_app.py  test_config.py  test_config_manager.py  test_providers.py  test_server_manager.py  test_ssh_config.py  test_ui.py
