[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "termainer"
version = "0.1.0"
description = "Container observability and operations directly from your terminal"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Alan Stefanov"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
]

dependencies = [
    "textual>=1.0.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
termainer = "termainer.app:main"

[tool.setuptools.packages.find]
where = ["src"]
