[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "termainer"
version = "0.4.0"
description = "Container observability and operations directly from your terminal"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Alan Stefanov"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
]

dependencies = [
    "textual>=1.0.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "python-semantic-release>=9.0",
]

[project.scripts]
termainer = "termainer.app:main"


[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["src/termainer/version.py:VERSION"]
branch = "main"
commit_message = "chore(release): {version}"
major_on_zero = false
upload_to_pypi = false
upload_to_release = true
build_command = ""

[tool.semantic_release.changelog]
exclude_commit_patterns = ["chore\\(", "docs\\(", "style\\("]
